--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ http://www.templatemo.com/tm-508-power
                                         </a>
                                     </li>
                                     <li class="col-md-15 col-sm-12 col-xs-12">
-                                        <a href="#theme">
+                                        <a href="https://drive.google.com/file/d/0B7p1q1njAvHwUmtLYk1yb2g4ai1DV0tOWjJLcTNVR2I0dkdj/view?usp=sharing">
                                             <div class="list-item">
                                                 <div class="icon">
                                                     <img src="img/second-list-icon.png" alt="">
