--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ http://www.templatemo.com/tm-508-power
                                         <a href="#translation">
                                             <div class="list-item">
                                                 <div class="icon">
-                                                    <img src="img/third-list-icon.png" alt="">
+                                                    <img id="oncall" src="img/third-list-icon.png" alt="Jordan">
                                                 </div>
                                                 <h4>On Call</h4>
                                             </div>
