--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ http://www.templatemo.com/tm-508-power
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>Number One The Norval Crew!</h4>
+                        <h4>#1 The Norval Crew!</h4>
                         <h6>So we now have online rosters...</h6>
                         <div class="border-button"></div>
                     </div>
@@ -142,8 +142,8 @@ http://www.templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                            <h4>Find </h4>
-                            <p>Choose what you are looking for and you shall recieve...  </p>
+                            <h4>What can you do...? </h4>
+                            <p>Choose from the following...  </p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@ http://www.templatemo.com/tm-508-power
                                         </a>
                                     </li>
                                     <li class="col-md-15 col-sm-12 col-xs-12">
-                                        <a href="#event">
+                                        <a href="https://norvalstaff.github.io/roster1.html">
                                             <div class="list-item">
                                                 <div class="icon">
                                                     <img src="img/fourth-list-icon.png" alt="">
