--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
                             <h6>- Online Roster -</h6>
-                            <h2>Norval Power</h2>
+                            <h2>Norval Staff</h2>
                             <ul class="buttons">
                                 <li>
                                     <div class="primary-button">
