--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ http://www.templatemo.com/tm-508-power
                                                 <li><a href="https://norvalstaff.github.io/roster1.html">Roster</a></li>
                                                 <li><a href="https://drive.google.com/file/d/0B7p1q1njAvHwUmtLYk1yb2g4ai1DV0tOWjJLcTNVR2I0dkdj/view?usp=sharing">Program</a></li>
                                                 <li><a href="#blog">Program Set-up</a></li>
-                                                <li><a href="https://norvalstaff/github.io/roster2.html">Next Week</a></li>                                 
+                                                <li><a href="https://norvalstaff.github.io/roster2.html">Next Week</a></li>                                 
                                             </ul>                                    
                                         </div> <!-- /.main-menu -->
                                     </div>
