--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ http://www.templatemo.com/tm-508-power
                                 <img src="img/first-service-icon.png" alt="">
                             </div>
                             <h4>Work Ready</h4>
-                            <p>Forgot to grab a roster hay dont worry, just check online for ease and simplitcity..! </p>
+                            <p>Forgot to grab a roster hay don't worry, just check online for ease and simplicity..! </p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -120,7 +120,7 @@ http://www.templatemo.com/tm-508-power
                                 <img src="img/second-service-icon.png" alt="">
                             </div>
                             <h4>Save the trees, No need to print these</h4>
-                            <p>THe greenie friendly option, we would only take out half a forrest each week with the amount of paper we use... Paper is a thing of the past and should only be used to whipe you're... ;) </p>
+                            <p> Paper is a thing of the past and should only be used to wipe your </p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -129,7 +129,7 @@ http://www.templatemo.com/tm-508-power
                                 <img src="img/third-service-icon.png" alt="">
                             </div>
                             <h4>Forgot if you where on breakfast shift? Or had to set up high ropes..? </h4>
-                            <p>Well lucky for you I have thought of all that and you will find everything you need plus more here..! Get around it norval we dont play around..! </p>
+                            <p>Don't stress just stay at his website address..!</p>
                         </div>
                     </div>
                 </div>
