--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@ http://www.templatemo.com/tm-508-power
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                         </button>
-                                        <a href="#top" class="navbar-brand">Norval</a>
+                                        <a href="#top" class="navbar-brand">Agricultural Contractor</a>
                                         <div id="main-nav" class="collapse navbar-collapse">
                                             <ul class="menu-first nav navbar-nav" style="margin-right: 20px;">
                                                 <li class="active"><a href="#">Home</a></li>
-                                                <li><a href="https://norvalstaff.github.io/roster1.html">Roster</a></li>
-                                                <li><a href="https://drive.google.com/file/d/0B7p1q1njAvHwUmtLYk1yb2g4ai1DV0tOWjJLcTNVR2I0dkdj/view?usp=sharing">Program</a></li>
-                                                <li><a href="#blog">Program Set-up</a></li>
-                                                <li><a href="https://norvalstaff.github.io/roster2.html">Next Week</a></li>                                 
+                                                <li><a href="https://norvalstaff.github.io/roster1.html">Fencing</a></li>
+                                                <li><a href="https://drive.google.com/file/d/0B7p1q1njAvHwUmtLYk1yb2g4ai1DV0tOWjJLcTNVR2I0dkdj/view?usp=sharing">Hay + Silage</a></li>
+                                                <li><a href="#blog">Cultivation</a></li>
+                                                <li><a href="https://norvalstaff.github.io/roster2.html">Contact</a></li>                                 
                                             </ul>                                    
                                         </div> <!-- /.main-menu -->
                                     </div>
@@ -68,17 +68,17 @@ http://www.templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
-                            <h6>- Online Roster -</h6>
-                            <h2>Norval Staff</h2>
+                            <h6>- Buxtons Best -</h6>
+                            <h2>Agricultural Contractor</h2>
                             <ul class="buttons">
                                 <li>
                                     <div class="primary-button">
-                                        <a href="https://norvalstaff.github.io/roster1.html">This Week</a>
+                                        <a href="https://norvalstaff.github.io/roster1.html">Fencing</a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="secondary-button">
-                                        <a href="https://norvalstaff.github.io/roster2.html">Next Week</a>
+                                        <a href="https://norvalstaff.github.io/roster2.html">Hay + Silage</a>
                                     </div>
                                 </li>
                             </ul>
@@ -93,8 +93,8 @@ http://www.templatemo.com/tm-508-power
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>#1 The Norval Crew!</h4>
-                        <h6>So we now have online rosters...</h6>
+                        <h4>#1</h4>
+                        <h6>Top Quality Guaranteed</h6>
                         <div class="border-button"></div>
                     </div>
                 </div>
@@ -110,8 +110,8 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/first-service-icon.png" alt="">
                             </div>
-                            <h4>Work Ready</h4>
-                            <p>Forgot to grab a roster hay don't worry, just check online for ease and simplicity..! </p>
+                            <h4>Fencing</h4>
+                            <p>Any of your fencing needs from simple wire fences, timber rail, chicken wire, mesh fencing and much much more..! </p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -119,8 +119,8 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/second-service-icon.png" alt="">
                             </div>
-                            <h4>Save the trees, No need to print these</h4>
-                            <p> Paper is a thing of the past and should only be used to wipe your </p>
+                            <h4>Hay + Silage</h4>
+                            <p> When hay seasons rolls around be sure to get in touch early, it's a busy time of year. With the heaviest bails in town you can't beat..!  </p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -128,8 +128,8 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/third-service-icon.png" alt="">
                             </div>
-                            <h4>Forgot if you where on breakfast shift? Or had to set up high ropes..? </h4>
-                            <p>Don't stress just stay at his website address..!</p>
+                            <h4>Cultivation </h4>
+                            <p>Need some ploughing down or maybe some seeding so when hay season rolls around you will have lush long grass that will gaurentee good hay plus much more just give me a call find how I can help out..! </p>
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="icon">
                                                     <img src="img/first-list-icon.png" alt="">
                                                 </div>
-                                                <h4>Roster</h4>
+                                                <h4>Fencing</h4>
                                             </div>
                                         </a>
                                     </li>
@@ -167,7 +167,7 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="icon">
                                                     <img src="img/second-list-icon.png" alt="">
                                                 </div>
-                                                <h4>Program</h4>
+                                                <h4>Hay + Silage</h4>
                                             </div>
                                         </a>
                                     </li>
@@ -177,7 +177,7 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="icon">
                                                     <img id="oncall" src="img/third-list-icon.png" alt="Jordan">
                                                 </div>
-                                                <h4>On Call</h4>
+                                                <h4>Cultivation</h4>
                                             </div>
                                         </a>
                                     </li>
@@ -187,7 +187,7 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="icon">
                                                     <img src="img/fourth-list-icon.png" alt="">
                                                 </div>
-                                                <h4>Morning Set-Up</h4>
+                                                <h4>Farm Managment</h4>
                                             </div>
                                         </a>
                                     </li>
@@ -197,7 +197,7 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="icon">
                                                     <img src="img/fivth-list-icon.png" alt="">
                                                 </div>
-                                                <h4>Next Week</h4>
+                                                <h4>Contact</h4>
                                             </div>
                                         </a>
                                     </li>
