--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Norval Staff</title>
+        <title>LW Gianforte Ag Contractor</title>
     	<meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- 
@@ -43,7 +43,7 @@ http://www.templatemo.com/tm-508-power
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                         </button>
-                                        <a href="#top" class="navbar-brand">Agricultural Contractor</a>
+                                        <a href="#top" class="navbar-brand">Agricultural Contractor </a>
                                         <div id="main-nav" class="collapse navbar-collapse">
                                             <ul class="menu-first nav navbar-nav" style="margin-right: 20px;">
                                                 <li class="active"><a href="#">Home</a></li>
@@ -73,7 +73,7 @@ http://www.templatemo.com/tm-508-power
                             <ul class="buttons">
                                 <li>
                                     <div class="primary-button">
-                                        <a href="https://norvalstaff.github.io/roster1.html">Fencing</a>
+                                        <a href="https://norvalstaff.github.io/fencingindex.html">Fencing</a>
                                     </div>
                                 </li>
                                 <li>
